--- a/landing-page-style.css
+++ b/landing-page-style.css
@@ -28,41 +28,11 @@ main {
     margin-bottom: 50px;
 }
 
-.planets {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
+.intro:hover {
+    color: yellow;
+    cursor: pointer;
 }
 
-.planet {
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 20px;
-    margin: 10px;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    transition: transform 0.3s;
-}
-
-.planet:hover {
-    transform: scale(2.0t);
-}
-
-.earth {
-    background-color: blue;
-}
-
-.mars {
-    background-color: red;
-}
-
-.jupiter {
-    background-color: orange;
-}
 
 footer {
     text-align: center;
