Start game button on landing page is functional and redirects users to the Difficulty-level-page

--- a/landing-page-style.css
+++ b/landing-page-style.css
@@ -28,9 +28,12 @@ main {
     margin-bottom: 50px;
 }
 
-.intro:hover {
-    color: yellow;
+#start-game-button:hover {
+    color: white;
+    background:#000; 
     cursor: pointer;
+    
+
 }
 
 
