--- a/questions-style.css
+++ b/questions-style.css
@@ -13,3 +13,8 @@ header {
     padding: 50px 0;
     background: rgba(0, 0, 0, 0.5);
 }
+
+div{
+    background-color: rgb(255, 255, 255);
+    height: 500px
+}
